--- a/page1.html
+++ b/page1.html
@@ -40,9 +40,8 @@
     </div>
     <div class="part2">
         <span class="titre">À propos de l'entreprise</span>
-        <span>PROTIMA Sp. z o.o. z o. o. est un fabricant polonais de machines, appareils, accessoires et produits chimiques de la plus haute qualité</span>
-        <span>destinés aux blanchisseries qui lavent les tapis de fond en comble au bain-marie.</span>
-        <input class="part2-btn" type="button" value="plus">
+        <span>Nous sommes Tapmachine Systems, les seuls fabricants en Afrique de machines de lavage de tapis. Spécialisés dans l'innovation et la qualité, nous concevons des équipements performants, durables et adaptés aux besoins des professionnels et particuliers.</span>
+        <span>            Avec un service après-vente réactif et un savoir-faire unique, nous simplifions le nettoyage de tapis pour nos clients partout en algerie </span>
     </div>
     <div class="part3">
         <h1>OFFRE</h1>
