--- a/page1.html
+++ b/page1.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
+            <div class="logo-menu">
             <a href="http://127.0.0.1:5500/Daho-s-Website/page1.html" class="nav-logo">
                 <img src="Nouveau dossier/TAPMACHINE SYSTEMSWHITE.png" alt="">
             </a>
-            <ul class="nav-menu">
+            <button type="button" onclick="toggleForm()" class="bt" id="nav-list"><span class="material-symbols-outlined">menu</span></button>
+            </div>
+            <ul class="nav-menu"  id="liste">
                 <li class="nav-item">
                     <a href="#" class="nav-link">A propos de nous</a>
                 </li>
@@ -99,6 +103,31 @@
 
     </div>
 </footer>
-<script src="index.js"></script>
+<script>
+    // Sélection des éléments
+
+ function toggleForm() {
+      var form = document.getElementById("liste");
+      var button = document.querySelector(".bt");
+      if (form.style.display === "block") {
+        closeForm();
+
+      } else {
+        openForm();
+
+      }
+    }
+
+    function openForm() {
+  var form = document.getElementById("liste");
+  form.style.display = "block";
+}
+
+function closeForm() {
+  var form = document.getElementById("liste");
+  form.style.display = "none";
+}
+
+</script>
 </body>
 </html>
