--- a/lavage2en1.html
+++ b/lavage2en1.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <a href="http://127.0.0.1:5500/Daho-s-Website/page1.html" class="nav-logo">
-                <img src="Nouveau dossier/TAPMACHINE SYSTEMSWHITE.png" alt="">
-            </a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">A propos de nous</a>
-                </li>
-                <li class="nav-item">
-                    <a href="http://127.0.0.1:5500/Daho-s-Website/machine.html" class="nav-link">Machines</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Galerie</a>
-                </li>
-                <li class="nav-item">
-                    <a href="http://127.0.0.1:5500/Daho-s-Website/contact.html" class="nav-link">Contact</a>
-                </li>
+    <nav class="navbar">
+        <div class="logo-menu">
+        <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
+            <img src="Nouveau dossier/TAPMACHINE SYSTEMSWHITE.png" alt="">
+        </a>
+        <button type="button" onclick="toggleForm()" class="bt" id="nav-list"><span class="material-symbols-outlined">menu</span></button>
+        </div>
+        <ul class="nav-menu"  id="liste">
+            <li class="nav-item">
+                <a href="#" class="nav-link">A propos de nous</a>
+            </li>
+            <li class="nav-item">
+                <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
+            </li>
+            <li class="nav-item">
+                <a href="https://anis23sel.github.io/Daho-s-website/image.html" class="nav-link">Galerie</a>
+            </li>
+            <li class="nav-item">
+                <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
+            </li>
 
-            </ul>
+        </ul>
 
-        </nav>
-    </header>
+    </nav>
+</header>
     
 <main>
 <div class="mach-bat">
