--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
+    <script src="index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
     <title>Document</title>
 </head>
@@ -11,7 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo-menu">
-            <a href="http://127.0.0.1:5500/Daho-s-Website/page1.html" class="nav-logo">
+            <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
                 <img src="Nouveau dossier/TAPMACHINE SYSTEMSWHITE.png" alt="">
             </a>
             <button type="button" onclick="toggleForm()" class="bt" id="nav-list"><span class="material-symbols-outlined">menu</span></button>
@@ -21,13 +22,13 @@
                     <a href="#" class="nav-link">A propos de nous</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://127.0.0.1:5500/Daho-s-Website/machine.html" class="nav-link">Machines</a>
+                    <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Galerie</a>
+                    <a href="https://anis23sel.github.io/Daho-s-website/image.html" class="nav-link">Galerie</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://127.0.0.1:5500/Daho-s-Website/contact.html" class="nav-link">Contact</a>
+                    <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
                 </li>
 
             </ul>
@@ -51,16 +52,15 @@
         <h1>OFFRE</h1>
         <div class="allmach">
             
-            <a class="mach" href="http://127.0.0.1:5500/Daho-s-Website/lavage.html"><img id="m-c" src="/Daho-s-Website/machine/ab.png" alt=""><p>Machine à laver les tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage1.html"><img id="m-c" src="machine/lavage.png" alt=""><p>Machine à laver les tapis</p></a>
 
-            <a class="mach" href="http://127.0.0.1:5500/Daho-s-Website/Batteur.html"><img id="m-c" src="machine/batteur.png" alt=""> <p>Batteur de tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Batteur.html"><img id="m-c" src="machine/batteur.png" alt=""> <p>Batteur de tapis</p></a>
             
-            <a class="mach" href="http://127.0.0.1:5500/Daho-s-Website/emballage.html"><img id="m-c" src="machine/emballage.png" alt=""><p>Table économique de roulage et d'emballage</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/emballage.html"><img id="m-c" src="machine/emballage.png" alt=""><p>Table économique de roulage et d'emballage</p></a>
 
-            <a class="mach" href="http://127.0.0.1:5500/Daho-s-Website/Centrifugeuse.html"><img id="m-c" src="machine/Centrifugeuse2.png" alt=""><p>Centrifugeuse à tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Centrifugeuse.html"><img id="m-c" src="machine/Centrifugeuse2.png" alt=""><p>Centrifugeuse à tapis</p></a>
 
-            <a class="mach" href="http://127.0.0.1:5500/Daho-s-Website/S%C3%89CHEUSE.html"><img id="m-c" src="machine/secheuse.png" alt=""><p>Cabine de sechage</p></a>
-
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/S%C3%89CHEUSE.html"><img id="m-c" src="machine/secheuse.png" alt=""><p>Cabine de sechage</p></a>
 
         </div>
         </div>
@@ -103,31 +103,6 @@
 
     </div>
 </footer>
-<script>
-    // Sélection des éléments
 
- function toggleForm() {
-      var form = document.getElementById("liste");
-      var button = document.querySelector(".bt");
-      if (form.style.display === "block") {
-        closeForm();
-
-      } else {
-        openForm();
-
-      }
-    }
-
-    function openForm() {
-  var form = document.getElementById("liste");
-  form.style.display = "block";
-}
-
-function closeForm() {
-  var form = document.getElementById("liste");
-  form.style.display = "none";
-}
-
-</script>
 </body>
 </html>
