--- a/SÉCHEUSE.html
+++ b/SÉCHEUSE.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <nav class="navbar">
         <div class="logo-menu">
         <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
