--- a/page1.html
+++ b/page1.html
@@ -46,12 +46,14 @@
     <div class="part2">
         <span class="titre">À propos de l'entreprise</span>
         <span>Nous sommes Tapmachine Systems, les seuls fabricants en Afrique de machines de lavage de tapis. Spécialisés dans l'innovation et la qualité, nous concevons des équipements performants, durables et adaptés aux besoins des professionnels et particuliers.</span>
-        <span>            Avec un service après-vente réactif et un savoir-faire unique, nous simplifions le nettoyage de tapis pour nos clients partout en algerie </span>
+        <span>Avec un service après-vente réactif et un savoir-faire unique, nous simplifions le nettoyage de tapis pour nos clients partout en algerie </span>
     </div>
     <div class="part3">
         <h1>OFFRE</h1>
         <div class="allmach">
             
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage1.html"><img id="m-c" src="machine/lavage.png" alt=""><p>Machine à laver les tapis</p></a>
+
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage1.html"><img id="m-c" src="machine/lavage.png" alt=""><p>Machine à laver les tapis</p></a>
 
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Batteur.html"><img id="m-c" src="machine/batteur.png" alt=""> <p>Batteur de tapis</p></a>
