--- a/lavage1.html
+++ b/lavage1.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <nav class="navbar">
         <div class="logo-menu">
         <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
@@ -40,7 +41,7 @@
         <h1>machime a laver</h1>
         <div class="allmach">
             
-            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage.html"><img id="m-c" src="/Daho-s-Website/12-Photoroom.png" alt=""><p>Machine à laver les tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage.html"><img id="m-c" src="machine/lavage.png" alt=""><p>Machine à laver les tapis</p></a>
 
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage2en1.html"><img id="m-c" src="machine/2en12.png" alt=""> <p>machine a laver et centrifugeuse 2 en 1 </p></a>
             
