--- a/machine.html
+++ b/machine.html
@@ -45,7 +45,7 @@
 
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Batteur.html"><img id="m-c" src="machine/batteur.png" alt=""> <p>Batteur de tapis</p></a>
             
-            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/emballage.html"><img id="m-c" src="machine/emballage.png" alt=""><p>Table économique de roulage et d'emballage</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/embalage1.html"><img id="m-c" src="machine/emballage.png" alt=""><p>Table de roulage et d'emballage</p></a>
 
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Centrifugeuse.html"><img id="m-c" src="machine/Centrifugeuse2.png" alt=""><p>Centrifugeuse à tapis</p></a>
 
