--- a/embalage1.html
+++ b/embalage1.html
@@ -41,9 +41,9 @@
         <h1>machine a emballage</h1>
         <div class="allmach">
             
-            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/lavage.html"><img id="m-c" src="machine/lavage.png" alt=""><p>Batteur de tapis avec bross</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/emballageab.html"><img id="m-c" src="machine/emballage2.png" alt=""><p>Table de roulage et d'emballage avec bross</p></a>
 
-            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/emballage.html"><img id="m-c" src="machine/emballage.png" alt=""> <p> Batteur de tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/emballage.html"><img id="m-c" src="machine/emballage.png" alt=""> <p>Table de roulage et d'emballage</p></a>
             
         </div>
     </div>
