--- a/SÉCHEUSE.html
+++ b/SÉCHEUSE.html
@@ -40,19 +40,26 @@
         <div class="gallery-slider">
             <!-- Image principale -->
             <div class="gallery-main">
-                <img id="mainImage" src="machine/emballage2.png" alt="Image principale" onclick="openModal(this.src)">
+                <img id="mainImage" src="machine/secheuse.png" alt="Image principale" onclick="openModal(this.src)">
             </div>
         
             <!-- Miniatures -->
             <div class="thumbnail-gallery">
-                <img src="machine/emballage2.png" alt="Miniature 1" onclick="changeImage(this.src)">
-                <img src="machine/eab/image1.jpg" alt="Miniature 1" onclick="changeImage(this.src)">
-                <img src="machine/eab/image2.jpg" alt="Miniature 2" onclick="changeImage(this.src)">
-                <img src="machine/eab/image3.jpg" alt="Miniature 3" onclick="changeImage(this.src)">
-                <img src="machine/eab/image4.jpg" alt="Miniature 4" onclick="changeImage(this.src)">
-                <img src="machine/eab/image5.jpg" alt="Miniature 5" onclick="changeImage(this.src)">
-                <img src="machine/eab/image6.jpg" alt="Miniature 6" onclick="changeImage(this.src)">
-                <img src="machine/eab/image7.jpg" alt="Miniature 7" onclick="changeImage(this.src)">
+                <img src="machine/secheuse.png" alt="Miniature 1" onclick="changeImage(this.src)">
+                <img src="machine/cabine/image (1).jpg" alt="Miniature 1" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (2).jpg" alt="Miniature 2" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (3).jpg" alt="Miniature 3" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (4).jpg" alt="Miniature 4" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (5).jpg" alt="Miniature 5" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (6).jpg" alt="Miniature 6" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (7).jpg" alt="Miniature 7" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (8).jpg" alt="Miniature 8" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (9).jpg" alt="Miniature 9" onclick="changeImage(this.src)">  
+                <img src="machine/cabine/image (10).jpg" alt="Miniature 9" onclick="changeImage(this.src)">
+                <img src="machine/cabine/image (11).jpg" alt="Miniature 9" onclick="changeImage(this.src)">
+                <img src="machine/cabine/image (12).jpg" alt="Miniature 9" onclick="changeImage(this.src)">
+                <img src="machine/cabine/image (13).jpg" alt="Miniature 9" onclick="changeImage(this.src)">
+                <img src="machine/cabine/image (14).jpg" alt="Miniature 9" onclick="changeImage(this.src)">
             </div>
         </div>
         
