--- a/emballage.html
+++ b/emballage.html
@@ -41,19 +41,11 @@
         <div class="gallery-slider">
             <!-- Image principale -->
             <div class="gallery-main">
-                <img id="mainImage" src="machine/emballage2.png" alt="Image principale" onclick="openModal(this.src)">
+                <img id="mainImage" src="machine/emballage.png" alt="Image principale" onclick="openModal(this.src)">
             </div>
         
             <!-- Miniatures -->
             <div class="thumbnail-gallery">
-                <img src="machine/emballage2.png" alt="Miniature 1" onclick="changeImage(this.src)">
-                <img src="machine/eab/image1.jpg" alt="Miniature 1" onclick="changeImage(this.src)">
-                <img src="machine/eab/image2.jpg" alt="Miniature 2" onclick="changeImage(this.src)">
-                <img src="machine/eab/image3.jpg" alt="Miniature 3" onclick="changeImage(this.src)">
-                <img src="machine/eab/image4.jpg" alt="Miniature 4" onclick="changeImage(this.src)">
-                <img src="machine/eab/image5.jpg" alt="Miniature 5" onclick="changeImage(this.src)">
-                <img src="machine/eab/image6.jpg" alt="Miniature 6" onclick="changeImage(this.src)">
-                <img src="machine/eab/image7.jpg" alt="Miniature 7" onclick="changeImage(this.src)">
             </div>
         </div>
         
