--- a/machine.html
+++ b/machine.html
@@ -30,6 +30,7 @@
             <li class="nav-item">
                 <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
             </li>
+            <div id="google_translate_element"></div>
 
         </ul>
 
@@ -97,5 +98,15 @@
 
     </div>
 </footer>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'fr',
+            includedLanguages: 'ar,fr',
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        }, 'google_translate_element');
+    }
+</script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
