--- a/page1.html
+++ b/page1.html
@@ -30,7 +30,9 @@
                 <li class="nav-item">
                     <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
                 </li>
-
+                <li class="nav-item">
+                    <div id="google_translate_element"></div>    
+                </li>
             </ul>
 
         </nav>
@@ -103,6 +105,15 @@
 
     </div>
 </footer>
-
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+            pageLanguage: 'fr',
+            includedLanguages: 'ar,fr',
+            layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        }, 'google_translate_element');
+    }
+</script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
