--- a/emballageab.html
+++ b/emballageab.html
@@ -30,9 +30,11 @@
                 <li class="nav-item">
                     <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
                 </li>
-
+                <li class="nav-item">
+                    <div id="google_translate_element"></div>
+                </li>
             </ul>
-
+            
         </nav>
     </header>
     
@@ -189,4 +191,13 @@
     </div>
 </footer>
 </body>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {pageLanguage: 'fr', includedLanguages: 'ar,fr'},
+        'google_translate_element'
+      );
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </html>
