--- a/lavage2en1.html
+++ b/lavage2en1.html
@@ -188,7 +188,9 @@
             <li class="nav-item">
                 <a href="tel:+213552533651"><img src="icon/phone-24.png" alt="">+213552533651</a>
             </li>
-
+            <li class="nav-item">
+                <div id="google_translate_element"></div>
+            </li>
         </ul>
     </div>
 
@@ -209,4 +211,13 @@
     </div>
 </footer>
 </body>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {pageLanguage: 'fr', includedLanguages: 'ar,fr'},
+        'google_translate_element'
+      );
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </html>
