--- a/machine.html
+++ b/machine.html
@@ -30,7 +30,9 @@
             <li class="nav-item">
                 <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
             </li>
-
+            <li class="nav-item">
+                <div id="google_translate_element"></div>
+            </li>
 
         </ul>
 
@@ -99,6 +101,15 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {pageLanguage: 'fr', includedLanguages: 'ar,fr'},
+        'google_translate_element'
+      );
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </body>
 </html>
