--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
                 <img src="Nouveau dossier/TAPMACHINE SYSTEMS WHITE.png" alt="">
             </a>
-            <button type="button" onclick="toggleForm()" class="bt" id="nav-list"><span class="material-symbols-outlined">menu</span></button>
+            <button type="button" onclick="toggleForm()" class="bt" id="nav-list" translate="no"><span class="material-symbols-outlined">menu</span></button>
             </div>
             <ul class="nav-menu"  id="liste">
                 <li class="nav-item">
@@ -46,7 +46,7 @@
             <div class="info">
             <h2>Informations de contact</h2>
             <div class="span">
-            <span><img src="icon/blue/map-marker-2-24.png" alt="">Ain El Bey </span> <hr>
+            <span><img src="icon/blue/map-marker-2-24.png" alt="">Ain El Bey Constantine </span> <hr>
             <span><img src="icon/blue/mail-24.png" alt="">dse@gmail.com</span> <hr>
             <span><img src="icon/blue/phone-24.png" alt="">+213552533651</span>
             </div>
@@ -63,7 +63,7 @@
         <ul class="footer-info">
             <h3>ABOUT :</h3>
             <li class="nav-item">
-                <a href="https://www.google.com/maps/place/Tapmachine+Systems/@36.3120516,6.6077126,16z/data=!4m6!3m5!1s0x12f171f12ef8aeb9:0x525ddc65821ac786!8m2!3d36.3120793!4d6.6064421!16s%2Fg%2F11t5wx_bjp?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D"> <img src="icon/map-marker-2-24.png" alt="">Ain El Bey</a>
+                <a href="https://www.google.com/maps/place/Tapmachine+Systems/@36.3120516,6.6077126,16z/data=!4m6!3m5!1s0x12f171f12ef8aeb9:0x525ddc65821ac786!8m2!3d36.3120793!4d6.6064421!16s%2Fg%2F11t5wx_bjp?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D"> <img src="icon/map-marker-2-24.png" alt="">Ain El Bey Constantine</a>
             </li>
             <li class="nav-item">
                 <a href="mailto:dse@gmail.com"><img src="icon/mail-24.png" alt="">dse@gmail.com</a>
