--- a/image.html
+++ b/image.html
@@ -16,7 +16,7 @@
                 <a href="https://anis23sel.github.io/Daho-s-website/page1.html" class="nav-logo">
                     <img src="Nouveau dossier/TAPMACHINE SYSTEMSWHITE.png" alt="">
                 </a>
-                <button type="button" onclick="toggleForm()" class="bt" id="nav-list"><span class="material-symbols-outlined">menu</span></button>
+                <button type="button" onclick="toggleForm()" class="bt" id="nav-list" translate="no"><span class="material-symbols-outlined">menu</span></button>
                 </div>
                 <ul class="nav-menu"  id="liste">
                     <li class="nav-item">
@@ -92,7 +92,7 @@
         <div class="about">
             <ul class="footer-info">
                 <h3>ABOUT :</h3>
-                <li class="nav-item"><a href="https://www.google.com/maps/place/Tapmachine+Systems">Ain El Bey</a></li>
+                <li class="nav-item"><a href="https://www.google.com/maps/place/Tapmachine+Systems">Ain El Bey Constantine</a></li>
                 <li class="nav-item"><a href="mailto:dse@gmail.com">dse@gmail.com</a></li>
                 <li class="nav-item"><a href="tel:+213552533651">+213552533651</a></li>
             </ul>
