--- a/lavage2en1.html
+++ b/lavage2en1.html
@@ -30,7 +30,9 @@
             <li class="nav-item">
                 <a href="https://anis23sel.github.io/Daho-s-website/contact.html" class="nav-link">Contact</a>
             </li>
-
+            <li class="nav-item">
+                <div id="google_translate_element"></div>
+            </li>
         </ul>
 
     </nav>
