--- a/page1.html
+++ b/page1.html
@@ -40,10 +40,10 @@
     
 <main>
     <div class="part1-image">
-        <div class="part1-text">
+        <div class="part1-text"> 
         <h1>FABRICANT DE MACHINES POUR LE NETTOYAGE DE TAPIS</h1>
-        <h3>VOIR NOTRE OFFRE</h3>
     </div>
+    <div class="banner"><img src="machine/footer-info.jpg" alt=""></div>
     </div>
     <div class="part2">
         <span class="titre">À propos de l'entreprise</span>
@@ -74,7 +74,7 @@
     </div>
 
     <div class="about">
-        <ul class="">
+        <ul class="footer-info">
             <h3>ABOUT :</h3>
             <li class="nav-item">
                 <a href="https://www.google.com/maps/place/Tapmachine+Systems/@36.3120516,6.6077126,16z/data=!4m6!3m5!1s0x12f171f12ef8aeb9:0x525ddc65821ac786!8m2!3d36.3120793!4d6.6064421!16s%2Fg%2F11t5wx_bjp?authuser=0&entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D"> <img src="icon/map-marker-2-24.png" alt="">Ain El Bey Constantine</a>
