--- a/page1.html
+++ b/page1.html
@@ -40,10 +40,11 @@
     
 <main>
     <div class="part1-image">
+        <img src="machine/footer-info2.jpg" alt="">
         <div class="part1-text"> 
         <h1>FABRICANT DE MACHINES POUR LE NETTOYAGE DE TAPIS</h1>
     </div>
-    <div class="banner"><img src="machine/footer-info.jpg" alt=""></div>
+    
     </div>
     <div class="part2">
         <span class="titre">À propos de l'entreprise</span>
