--- a/SÉCHEUSE.html
+++ b/SÉCHEUSE.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
     <script src="index.js"></script>
-    <title>Document</title>
+    <title>Cabine de sechage</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
         </div>
         <ul class="nav-menu"  id="liste">
             <li class="nav-item">
-                <a href="#" class="nav-link">A propos de nous</a>
+                <a href="https://anis23sel.github.io/Daho-s-website/surnous.html" class="nav-link">A propos de nous</a>
             </li>
             <li class="nav-item">
                 <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
