--- a/lavage2en1.html
+++ b/lavage2en1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="page1.css">
     <script src="index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <title>Document</title>
+    <title>machine a laver et centrifugeuse 2 en 1</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
         </div>
         <ul class="nav-menu"  id="liste">
             <li class="nav-item">
-                <a href="#" class="nav-link">A propos de nous</a>
+                <a href="https://anis23sel.github.io/Daho-s-website/surnous.html" class="nav-link">A propos de nous</a>
             </li>
             <li class="nav-item">
                 <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
@@ -78,7 +78,7 @@
             <img id="modalImage" alt="Image agrandie">
         </div>
         <div class="pt">
-            <h1>Machine à laver les tapis</h1>
+            <h1>machine a laver et centrifugeuse 2 en 1</h1>
             <ul class="avantage">
                 <h3>Avantage</h3>
                 <li>capacité jusqu'à 15 tapis par heure possibilité de laver 1 à 3 tapis en même temps possibilité de fonctionnement continu sans éteindre l'appareil trois sections de lavage pompe à pression intégrée 92 l/min tuyau mobile facilitant le déplacement des tapis sur un transport incliné chariot deux étagères pratiques pour stocker des produits chimiques ou des accessoires pas besoin d'alimentation en air comprimé panneau de commande simple fonction d'enroulement du tapis régulation douce de la pression des brosses à disque avec actionneur électrique jusqu'à 100 kg remplacement simple et rapide des brosses réglage de la vitesse d'avancement du tapis avec possibilité de interrupteur d'urgence réversible réglage de la plage de fonctionnement de la section de lavage et de rinçage les moteurs et les éléments de transmission cachés derrière les couvercles garantissent une sécurité à 100% possibilité d'inspection visuelle du tapis pendant tout le processus de lavage dispositif actionné par un seul opérateur petites dimensions et poids permettant une installation dans petites blanchisseries, appareil équipé de roues pivotantes, capacité jusqu'à 15 tapis par heure</li>
