--- a/emballageab.html
+++ b/emballageab.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="page1.css">
     <script src="index.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-    <title>Document</title>
+    <title>Machines d`enroulement et d`emballage de tapis avec bross</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav-menu"  id="liste">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">A propos de nous</a>
+                    <a href="https://anis23sel.github.io/Daho-s-website/surnous.html" class="nav-link">A propos de nous</a>
                 </li>
                 <li class="nav-item">
                     <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
@@ -68,7 +68,7 @@
     
 
         <div class="pt">
-            <h1>Table de roulage et d'emballage avec bross</h1>
+            <h1>Machines d`enroulement et d`emballage de tapis avec bross</h1>
             <ul class="avantage">
                 <h3>Avantage</h3>
                 <li>Capacité jusqu'à 40 tapis par heure</li>
