--- a/surnous.html
+++ b/surnous.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page1.css">
-    <title>Document</title>
+    <title>A propos de nous</title>
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             </div>
             <ul class="nav-menu"  id="liste">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">A propos de nous</a>
+                    <a href="https://anis23sel.github.io/Daho-s-website/surnous.html" class="nav-link">A propos de nous</a>
                 </li>
                 <li class="nav-item">
                     <a href="https://anis23sel.github.io/Daho-s-website/machine.html" class="nav-link">Machines</a>
