--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
             
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/embalage1.html"><img id="m-c" src="machine/emballage.png" alt=""><p>Table économique de roulage et d'emballage</p></a>
 
-            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/Centrifugeuse.html"><img id="m-c" src="machine/Centrifugeuse2.png" alt=""><p>Centrifugeuse à tapis</p></a>
+            <a class="mach" href="https://anis23sel.github.io/Daho-s-website/centi.html"><img id="m-c" src="machine/Centrifugeuse2.png" alt=""><p>Centrifugeuse à tapis</p></a>
 
             <a class="mach" href="https://anis23sel.github.io/Daho-s-website/S%C3%89CHEUSE.html"><img id="m-c" src="machine/secheuse.png" alt=""><p>Cabine de sechage</p></a>
 
